chang ed missspelling

--- a/PA2/Task1.ipynb
+++ b/PA2/Task1.ipynb
@@ -212,7 +212,7 @@
    "id": "6ad9517c",
    "metadata": {},
    "source": [
-    "The pipeline did get a bit worse results however this is due to the f_classif evaluator usually beiong used for numerical features but our data does have class based data as well. Seperating what test to use on what feature is possible if we would've used ColumnTransformer instead of DictVectorizer."
+    "The pipeline did get a bit worse results however this is due to the f_classif evaluator being meant for numerical features but our data does have class based data as well. Seperating what test to use on what feature is possible if we would've used ColumnTransformer instead of DictVectorizer."
    ]
   }
  ],
